[package]
name = "tav"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Terminal anti-virus"

[dependencies]
notify = "6.1.1"
regex = "1.10.3"
reqwest = { version = "0.12", features = ["blocking"] }
sysinfo = "0.30.7"
walkdir = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
