[package]
name = "tav"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Terminal anti-virus"

[dependencies]
notify = "6.1.1"
regex = "1.10.4"
reqwest = { version = "0.12", features = ["blocking"] }
sysinfo = "0.30.7"
walkdir = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
image = "ghcr.io/cross-rs/x86_64-unknown-linux-gnu:main-centos"
