[package]
name = "tav"
version = "1.1.0"
edition = "2021"
license = "MIT"
description = "Terminal anti-virus"

[dependencies]
clap = { version = "4", features = ["cargo"], optional = true }
notify = "6.1.1"
regex = "1.10.4"
reqwest = { version = "0.12", features = ["blocking"] }
sysinfo = "0.30.10"
walkdir = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_derive = "1.0.197"
anyhow = "1"
console = "^0.15.0"
exitcode = "^1.1.2"
tracing = "^0.1.34"
tracing-tree = { version = "0.3.0" }
tracing-subscriber = { version = "^0.3.11", features = ["env-filter"] }

[features]
default = ["cli"]
# list optionals here:
cli = ["clap"]

required-features = ["cli"]
